<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="fill_parent"
        android:text="@string/description"
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:autoLink="web"
        android:textStyle="bold">
    </TextView>
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView1">
        <LinearLayout android:layout_width="fill_parent"
            android:id="@+id/linearLayout1"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Standalone Example"
                android:id="@+id/standaloneExample_btn"></Button>
            <Button
                android:text="List Example"
                android:id="@+id/listExample_btn"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

            </Button>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.design.widget.TabItem
            android:id="@+id/tabFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabFonts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/font" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabNotebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notebook" />
    </android.support.design.widget.TabLayout>
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autoLink="web"
        android:autofillHints="@string/write_notes" />

</LinearLayout>